# demo-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/demo_cli/: __init__.py  cli.py
