[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "demo-cli"
version = "0.1.5"
description = "A minimal Python CLI starter built with Typer"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
  "typer>=0.12.0,<1.0.0"
]
keywords = ["cli", "typer", "starter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/yourname/demo-cli"
Repository = "https://github.com/yourname/demo-cli"
Issues = "https://github.com/yourname/demo-cli/issues"

[project.scripts]
demo = "demo_cli.cli:app"
"demo-cli" = "demo_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_cli"]
